# computer-use-harness

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.ps1
docs/plans/: 2026-03-06-electron-cdp-support-design.md  2026-03-06-electron-cdp-support-plan.md  2026-03-06-robust-gui-navigation-design.md  2026-03-06-robust-gui-navigation-plan.md
dotnet-sidecar/LocalWindowsSidecar/: CdpClient.cs  CdpUIBackend.cs  ElectronDetector.cs  ElectronLauncher.cs  IUIBackend.cs  LocalWindowsSidecar.csproj  Program.cs  UIAutomationHelper.cs  UIBackendRouter.cs  WindowsUIBackend.cs
dotnet-sidecar/LocalWindowsSidecar/Models/: WindowModels.cs
skills/computer-use-harness/: SKILL.md
src/computer_use_harness/: __init__.py  cli.py
src/computer_use_harness/agent/: harness.py  openai_client.py  screenshot_diff.py  stuck_detector.py
src/computer_use_harness/config/: settings.py
src/computer_use_harness/demos/: tasks.md
src/computer_use_harness/logging/: logger.py  trace.py
src/computer_use_harness/models/: schemas.py
src/computer_use_harness/safety/: policy.py
src/computer_use_harness/sidecar/: client.py
src/computer_use_harness/tools/: base.py  local_tools.py  registry.py
tests/: test_fully_automated.py  test_harness_robustness.py  test_policy.py  test_screenshot_diff.py  test_stuck_detector.py  test_system_install.py
